# DesktopUpdateKit

./: .gitignore  CONTRIBUTING.md  LICENSE  PROVENANCE.md  README.md  THIRD-PARTY-NOTICES.md
docs/: ABOUT_PAGE_GUIDELINES.md  BEHAVIOR_CONTRACT.md  COMPATIBILITY_MATRIX.md  DOWNLOAD_ARCHITECTURE.md
native/: CMakeLists.txt  README.md
native/include/DesktopUpdateKit/: UpdateKit.h
native/scripts/: build-native.ps1
native/src/: Json.cpp  Json.h  NodeSelection.h  UpdateKit.cpp
native/tests/: NativeTests.cpp  TestHost.cpp  TransportTests.cpp
native/updater/: main.cpp
schemas/: release-config.schema.json  update-manifest.schema.json
src/DesktopUpdateKit/: UpdateClient.cs  UpdateDownloadSession.cs  UpdateLauncher.cs  UpdateModels.cs  UpdateNodeCache.cs  UpdaterStubSource.cs
src/UpdaterStub/: Directory.Build.props  Program.cs  UpdaterStub.csproj
tests/: Test-ManagedStub.ps1
tests/DesktopUpdateKit.Tests/: ContractTests.cs  DesktopUpdateKit.Tests.csproj
tests/contracts/: invalid-repository-update.json  valid-update.json
tools/: Build-Release.ps1  Prepare-ReleaseAssets.ps1  Publish-Release.ps1  ReleaseRules.ps1
